--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-particles-js": "^3.6.0",
+    "react-tsparticles": "^2.5.3",
     "sass": "^1.56.1",
+    "tsparticles": "^2.5.3",
     "typescript": "4.9.3"
   }
 }
