--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.0.4",
     "gsap": "^3.11.3",
     "next": "13.0.4",
+    "next-videos": "1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-tsparticles": "^2.5.3",
